--- a/index.htm
+++ b/index.htm
@@ -34,8 +34,7 @@
         <h1>xeo (kseo)</h1>
 
         <div class="profile-photo">
-            <video autoplay="" loop="" muted="" playsinline="" class="profile-video">
-                <source src="imgs/ava.mov" type="video/mp4">
+                <source src="imgs/ava.jpg">
                 Ваш браузер не поддерживает видео тег.
             </video>
         </div>
@@ -70,7 +69,7 @@
             <div class="modal-content">
                 <span id="closeModal" class="close">&times;</span>
                 <h1>Проекты</h1>
-                <h2>@wwvshop (tg)</h2>
+                <h2>@wvvshop (tg)</h2>
                 <p>Магазин по продаже подписок на различные сервисы</p>
                 <h2>DeathHospital</h2>
                 <p>Telegram проект созданный в 2021 году по тематике доксинг комьюннити. Был очень популярен</p>
