--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
         <div class="profile-photo">
                 <source src="imgs/ava.jpg">
                 Ваш браузер не поддерживает видео тег.
-            </video>
+            </photo>
         </div>
         
         <div class="bio">
