--- a/index.htm
+++ b/index.htm
@@ -33,11 +33,9 @@
     <div class="container">
         <h1>xeo (kseo)</h1>
 
-        <div class="profile-photo">
-                <source src="imgs/ava.jpg">
-                Ваш браузер не поддерживает видео тег.
-            </photo>
-        </div>
+  <div class="profile-photo">
+    <img src="imgs/ava.jpg" alt="Profile Photo">
+  </div>
         
         <div class="bio">
             <h2>Обо мне</h2>
