--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>xeo</title>
+  <title>「 Xeo 」</title>
   <link href="css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="ajax/libs/three.js/r128/three.min.js"></script>
