--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,10 @@
   <link href="ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+  <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 
     <canvas class="glslCanvas"></canvas>
 
