--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
         
         <div class="bio">
             <h2>Обо мне</h2>
-            <p>Reverse-инженер, 14 лет, Был в командах "Аукцион Пальцев" и "Shapito" , Работаю на даркнет маркетплейсах (Rutor, BlackSprut) , изучаю Пентест и нетворкинг.</p>
+            <p>Reverse-инженер, Был в командах "Аукцион Пальцев" и "Shapito" , Работаю в целях РФ , изучаю Пентест и нетворкинг.</p>
             <p>Занимаюсь Гос. Пробивами и силовыми услугами.</p>
         </div>
 
